// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders the correct number of bullets 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-knmidH {
    justify-content: space-between;
  }

  .c-lnckVF {
    position: relative;
    font-family: var(--fonts-body);
    font-weight: 600;
    font-size: var(--fontSizes-md);
  }

  .c-lnckVF:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    content: "";
    position: absolute;
  }

  .c-giGIoG {
    position: relative;
    justify-content: center;
    align-items: center;
  }

  .c-tthIx {
    padding: var(--space-2);
    justify-content: center;
    align-items: center;
    height: var(--sizes-3);
    width: var(--sizes-3);
    border-radius: 50%;
    border: none;
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-fkUJsw-eYnvrx-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
  }

  .c-lnckVF-fZPNqf-separator-active:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    background: var(--colors-primary);
  }

  .c-tthIx-gjRYFk-state-active {
    background: white;
    color: var(--colors-primaryMid);
    border: 2px solid;
    border-color: currentColor;
  }

  .c-lnckVF-NYdPG-separator-normal:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    background: var(--colors-tonal50);
  }

  .c-tthIx-jdelko-state-normal {
    background: var(--colors-tonal50);
    color: var(--colors-tonal400);
  }
}

@media  {
  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

@media  {
  .c-PJLV-ibhOcIJ-css {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
  }

  .c-dhzjXW-ieGGkix-css:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    width: var(--sizes-1);
    height: var(--sizes-1);
  }

  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-fkUJsw-icKSZB-css {
    margin-left: auto;
  }

  .c-dhzjXW-igsmDXe-css {
    cursor: pointer;
  }
}

<div>
  <div
    aria-label="progress"
    class="c-PJLV c-PJLV-ibhOcIJ-css"
  >
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-fSssiS-cv"
      disabled=""
      type="button"
    >
      Back
    </button>
    <div
      class="c-dhzjXW c-knmidH"
    >
      <div
        class="c-dhzjXW c-lnckVF c-lnckVF-fZPNqf-separator-active c-dhzjXW-ieGGkix-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-current="step"
            aria-label="step 1"
            class="c-dhzjXW c-tthIx c-tthIx-gjRYFk-state-active c-dhzjXW-igsmDXe-css"
          >
            1
          </button>
        </div>
      </div>
      <div
        class="c-dhzjXW c-lnckVF c-lnckVF-NYdPG-separator-normal c-dhzjXW-ieGGkix-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-label="step 2"
            class="c-dhzjXW c-tthIx c-tthIx-jdelko-state-normal c-dhzjXW-idGcKFW-css"
          >
            2
          </button>
        </div>
      </div>
      <div
        class="c-dhzjXW c-lnckVF c-lnckVF-NYdPG-separator-normal c-dhzjXW-ieGGkix-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <button
            aria-label="step 3"
            class="c-dhzjXW c-tthIx c-tthIx-jdelko-state-normal c-dhzjXW-idGcKFW-css"
          >
            3
          </button>
        </div>
      </div>
    </div>
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-gsycxF-cv c-fkUJsw-icKSZB-css"
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Stepper renders the correct number of bullets when used as a controlled component 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-knmidH {
    justify-content: space-between;
  }

  .c-lnckVF {
    position: relative;
    font-family: var(--fonts-body);
    font-weight: 600;
    font-size: var(--fontSizes-md);
  }

  .c-lnckVF:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    content: "";
    position: absolute;
  }

  .c-giGIoG {
    position: relative;
    justify-content: center;
    align-items: center;
  }

  .c-tthIx {
    padding: var(--space-2);
    justify-content: center;
    align-items: center;
    height: var(--sizes-3);
    width: var(--sizes-3);
    border-radius: 50%;
    border: none;
    background: var(--colors-tonal50);
  }

  .c-fIXJvv {
    color: var(--colors-tonal600);
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-fIXJvv > .c-fIXJvv:before,
  .c-fIXJvv > .c-fIXJvv:after {
    display: none;
  }

  .c-ecBjWS {
    font-weight: 600;
  }
}

@media  {
  .c-fkUJsw-eYnvrx-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
  }

  .c-lnckVF-fZPNqf-separator-active:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    background: var(--colors-primary);
  }

  .c-tthIx-gjRYFk-state-active {
    background: white;
    color: var(--colors-primaryMid);
    border: 2px solid;
    border-color: currentColor;
  }

  .c-lnckVF-NYdPG-separator-normal:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    background: var(--colors-tonal50);
  }

  .c-tthIx-jdelko-state-normal {
    background: var(--colors-tonal50);
    color: var(--colors-tonal400);
  }

  .c-tthIx-lkRQpS-state-viewed {
    background: var(--colors-primary);
    color: white;
  }

  .c-knmidH-iTKOFX-orientation-vertical {
    flex-direction: column;
  }

  .c-lnckVF-dbkyPG-orientation-vertical {
    flex-direction: row;
    align-items: center;
  }

  .c-lnckVF-dbkyPG-orientation-vertical:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    width: 4px !important;
    top: 100%;
  }

  .c-knmidH-ejCoEP-orientation-horizontal {
    flex-direction: row;
  }

  .c-lnckVF-cfQFbD-orientation-horizontal {
    flex-direction: column;
    align-items: center;
  }

  .c-lnckVF-cfQFbD-orientation-horizontal:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    height: 4px !important;
    left: 100%;
  }

  .c-fIXJvv-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-fIXJvv-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-fIXJvv-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-ecBjWS-cDiHrO-state-active {
    color: var(--colors-primaryMid);
  }

  .c-ecBjWS-iHLjaT-state-normal {
    color: var(--colors-tonal400);
    font-weight: 400;
  }
}

@media  {
  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

@media  {
  .c-PJLV-ibhOcIJ-css {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
  }

  .c-dhzjXW-ieGGkix-css:not(:last-child) .c-dhzjXW:where(.c-tthIx)::after {
    width: var(--sizes-1);
    height: var(--sizes-1);
  }

  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-fkUJsw-icKSZB-css {
    margin-left: auto;
  }

  .c-dhzjXW-igsmDXe-css {
    cursor: pointer;
  }
}

<div>
  <div
    aria-label="progress"
    class="c-PJLV c-PJLV-ibhOcIJ-css"
  >
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-fSssiS-cv"
      disabled=""
      type="button"
    >
      Back
    </button>
    <div
      class="c-dhzjXW c-knmidH"
    >
      <div
        class="c-dhzjXW c-lnckVF c-lnckVF-fZPNqf-separator-active c-dhzjXW-ieGGkix-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <div
            aria-current="step"
            aria-label="step 1"
            class="c-dhzjXW c-tthIx c-tthIx-gjRYFk-state-active c-dhzjXW-idGcKFW-css"
          >
            1
          </div>
        </div>
        <div
          class="c-PJLV"
        >
          <p
            class="c-fIXJvv c-fIXJvv-gvmVBy-size-md c-ecBjWS c-ecBjWS-cDiHrO-state-active"
          >
            Step 1
          </p>
        </div>
      </div>
      <div
        class="c-dhzjXW c-lnckVF c-lnckVF-NYdPG-separator-normal c-dhzjXW-ieGGkix-css"
      >
        <div
          class="c-dhzjXW c-giGIoG"
        >
          <div
            aria-label="step 2"
            class="c-dhzjXW c-tthIx c-tthIx-jdelko-state-normal c-dhzjXW-idGcKFW-css"
          >
            2
          </div>
        </div>
        <div
          class="c-PJLV"
        >
          <p
            class="c-fIXJvv c-fIXJvv-gvmVBy-size-md c-ecBjWS c-ecBjWS-iHLjaT-state-normal"
          >
            Step 2
          </p>
        </div>
      </div>
    </div>
    <button
      class="c-fkUJsw c-fkUJsw-eYnvrx-size-sm c-fkUJsw-gsycxF-cv c-fkUJsw-icKSZB-css"
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;
